# toggl-python

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: pr.yml  release.yml  test_release.yml
docs/: conf.py  index.rst
tests/: conftest.py  fixtures.py  responses.py  test_api.py  test_entities.py  test_project.py  test_report_time_entry.py  test_repositories.py  test_time_entry.py  test_user.py  test_workspace.py
tests/factories/: base.py  project.py  time_entry.py  workspace.py
tests/integration/: __init__.py  conftest.py  test_project.py  test_report_time_entry.py  test_time_entry.py  test_user.py  test_workspace.py
tests/responses/: me_get.py  me_put.py  project_get.py  report_time_entry_post.py  time_entry_get.py  time_entry_put_and_patch.py  workspace_get.py
toggl_python/: __init__.py  api.py  auth.py  entities.py  exceptions.py  repository.py  response.py
toggl_python/entities/: report_time_entry.py  user.py  workspace.py
toggl_python/schemas/: base.py  current_user.py  project.py  report_time_entry.py  time_entry.py  workspace.py
