[tool.poetry]
name = "toggl_python"
version = "0.2.9"
description = "Python wrapper for Toggl API."
authors = ["Evrone <mail@evrone.com>"]
maintainers = ["Nifadev Vadim <vnifadev@evrone.com>"]
readme = "README.md"
homepage = "https://github.com/evrone/toggl_python"
repository = "https://github.com/evrone/toggl_python"
documentation = "https://toggl-python.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.8.18"
httpx = {extras = ["http2"], version = "^0.27.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
nox = "^2024.4.15"
respx = "^0.21.1"
ruff = "^0.5.4"
pre-commit = "3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["toggl_python"]
line-length = 99
extend-exclude = [
    "docs/*",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D106", # Missing docstring in public nested class
    "D107", # Missing docstring in __init__
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pylint]
max-args = 12
max-public-methods = 10
max-locals = 16

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"
